--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,27 @@
 ---
-layout: base
+layout: default
 ---
-{% if page.cover %}
-<div class="row">
-{% img page.cover cover %}
-</div>
-{% endif %}
-<div class="row">
-<h2>{{ page.title }}</h2>
-<div class="valign-wrapper">
-<div class="author"><img src="{{ site.author_img | prepend: site.baseurl }}" class="circle responsive-img"></div> {% for category in page.categories %}<h5><a href="{{ category | prepend: '/categories/' | prepend: site.baseurl }}">{{ category }}</a>{% unless forloop.last%}, {% endunless %}{% endfor%} - {{ page.date | date: "%m/%d/%Y" }}</h5>
-</div>
-    {% for tag in page.tags %}
-    {% if tag != site.sticky %}
-    <a href="{{ tag | prepend: '/tags/' | prepend: site.baseurl }}"><div class="chip waves-effect waves-red">{{ tag }}</div></a>
-    {% endif %}
-    {% endfor %}
-</div>
-<div class="row">
-{{ content }}
-</div>
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+
+  <header class="artilce_header">
+    <h1 class="artilce_title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="artilce_meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  </header>
+
+  <div class="article-content" itemprop="articleBody">
+    {{ page.content }}
+  </div>
+
+  <footer class="article-footer">
+
+  {% include share.html %}
+
+  <hr/>
+
+  {% include author.html %}
+
+  </footer>
+
+  {% include dq.html %}
+
+</article>
