--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,24 @@
-<footer class="page-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                    content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-        </div>
+<footer class="site-footer">
+  <div class="container">
+    <div class="footer left column one-half">
+      <section class="small-font">
+        © 2016 
+        Powered by <a href="https://github.com/EricWay/EricWay.github.io">EricWay</a>
+      </section>
     </div>
-    <div class="footer-copyright">
-        <div class="container">
-            © 2016 Avalon
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
+
+    <div class="footer right column one-half">
+      <section class="small-font">
+        {% if site.github_username %}
+        {% include icon-github.html username=site.github_username %}
+        {% endif %}
+        {% if site.twitter_username %}
+        {% include icon-twitter.html username=site.twitter_username %}
+        {% endif %}
+        {% if site.weibo_username %}
+        {% include icon-weibo.html username=site.weibo_username %}
+        {% endif %}
+      </section>
     </div>
+  </div>
 </footer>
